"iniciando test com jest"

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
         <title>Ulha Travel</title>
 </head>
 <header>
-    <img src="public/img/logo.png" alt="Ulha Travel Logo">
+    <img src="./public/img/logo.png" alt="Ulha Travel Logo">
 </header>
 <body>
      {{{body}}}
